--- a/text.css
+++ b/text.css
@@ -14,7 +14,7 @@ body{
     background-size: cover; */
     background-color: hsla(16, 25%, 38%, 0.71);
     width: 435px;
-    height: 583px;
+    height: 580px;
     padding: 20px;
     margin: auto;
     font-size: 35px;
@@ -26,6 +26,13 @@ h1{
 #message-el {
     font-style: italic;
 }
+.butt{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-between;
+}
 button {
     color:  #795548;
     width: 200px;
@@ -36,6 +43,7 @@ button {
     border: none;
     border-radius: 2px;
     margin-bottom: 5PX;
+    margin-bottom:15px ;
     box-shadow: 4px 5px 5px 3px rgba(0, 0, 0, 0.5);
 }
 #player-el{
