--- a/text.css
+++ b/text.css
@@ -14,7 +14,7 @@ body{
     background-size: cover; */
     background-color: hsla(16, 25%, 38%, 0.71);
     width: 435px;
-    height: 580px;
+    height: 100vh;
     padding: 20px;
     margin: auto;
     font-size: 35px;
